# reasonable_outdoor_mobile_robot_ros_controller

./: README.md
reasonable_outdoor_mobile_robot_controller/: CMakeLists.txt  package.xml
reasonable_outdoor_mobile_robot_controller/config/: reasonable_outdoor_mobile_robot_controller.yaml
reasonable_outdoor_mobile_robot_controller/include/reasonable_outdoor_mobile_robot_controller/: reasonable_robot_interface.h
reasonable_outdoor_mobile_robot_controller/src/: reasonable_robot_arduino_communicator.cpp  reasonable_robot_controller.cpp  reasonable_robot_interface.cpp
reasonable_outdoor_mobile_robot_description/: CMakeLists.txt  package.xml
reasonable_outdoor_mobile_robot_description/config/: reasonable_outdoor_mobile_robot_config.yaml
reasonable_outdoor_mobile_robot_description/gazebo/: reasonable_outdoor_mobile_robot.gazebo.xacro
reasonable_outdoor_mobile_robot_description/launch/: robot.launch  robot_description.launch
reasonable_outdoor_mobile_robot_description/robots/: reasonable_outdoor_mobile_robot.urdf.xacro
reasonable_outdoor_mobile_robot_launcher/: CMakeLists.txt  package.xml
reasonable_outdoor_mobile_robot_launcher/launch/: robot_launcher.launch
reasonable_outdoor_mobile_robot_sim/: CMakeLists.txt  package.xml
reasonable_outdoor_mobile_robot_sim/launch/: robot_launcher.launch
